// Vitest Snapshot v1

exports[`e2e:make > cjs > should create bundle in cjs format 1`] = `
[
  {
    "entryPoint": "src/index.cts",
    "errors": [],
    "outfile": "dist/index.cjs",
    "path": "\${process.cwd()}/__fixtures__/pkg/my-atoi/dist/index.cjs",
    "warnings": [],
  },
]
`;

exports[`e2e:make > cjs > should create bundleless build in cjs format 1`] = `
[
  {
    "entryPoint": "src/index.cts",
    "errors": [],
    "outfile": "dist/index.cjs",
    "path": "\${process.cwd()}/__fixtures__/pkg/my-atoi/dist/index.cjs",
    "warnings": [],
  },
  {
    "entryPoint": "src/max-value.ts",
    "errors": [],
    "outfile": "dist/max-value.cjs",
    "path": "\${process.cwd()}/__fixtures__/pkg/my-atoi/dist/max-value.cjs",
    "warnings": [],
  },
  {
    "entryPoint": "src/min-value.ts",
    "errors": [],
    "outfile": "dist/min-value.cjs",
    "path": "\${process.cwd()}/__fixtures__/pkg/my-atoi/dist/min-value.cjs",
    "warnings": [],
  },
  {
    "entryPoint": "src/my-atoi.cts",
    "errors": [],
    "outfile": "dist/my-atoi.cjs",
    "path": "\${process.cwd()}/__fixtures__/pkg/my-atoi/dist/my-atoi.cjs",
    "warnings": [],
  },
]
`;

exports[`e2e:make > esm > should create bundle in esm format 1`] = `
[
  {
    "entryPoint": "dbl-linear.ts",
    "errors": [],
    "outfile": "dist/index.mjs",
    "path": "\${process.cwd()}/__fixtures__/pkg/dbl-linear/dist/index.mjs",
    "warnings": [],
  },
]
`;

exports[`e2e:make > esm > should create bundleless build in esm format 1`] = `
[
  {
    "entryPoint": "dbl-linear.ts",
    "errors": [],
    "outfile": "dist/dbl-linear.mjs",
    "path": "\${process.cwd()}/__fixtures__/pkg/dbl-linear/dist/dbl-linear.mjs",
    "warnings": [],
  },
]
`;

exports[`e2e:make > iife > should create bundle in iife format 1`] = `
[
  {
    "entryPoint": "src/tribonacci.ts",
    "errors": [],
    "outfile": "dist/index.js",
    "path": "\${process.cwd()}/__fixtures__/pkg/tribonacci/dist/index.js",
    "warnings": [],
  },
]
`;

exports[`e2e:make > iife > should create bundleless build in iife format 1`] = `
[
  {
    "entryPoint": "src/tribonacci.ts",
    "errors": [],
    "outfile": "dist/tribonacci.js",
    "path": "\${process.cwd()}/__fixtures__/pkg/tribonacci/dist/tribonacci.js",
    "warnings": [],
  },
]
`;

exports[`e2e:make > should copy files to output directory 1`] = `
[
  {
    "entryPoint": "sum-of-intervals.cjs",
    "errors": [],
    "outfile": "dist/sum-of-intervals.cjs",
    "path": "\${process.cwd()}/__fixtures__/pkg/sum-of-intervals/dist/sum-of-intervals.cjs",
    "warnings": [],
  },
  {
    "entryPoint": "sum-of-intervals.d.ts",
    "errors": [],
    "outfile": "dist/sum-of-intervals.d.ts",
    "path": "\${process.cwd()}/__fixtures__/pkg/sum-of-intervals/dist/sum-of-intervals.d.ts",
    "warnings": [],
  },
  {
    "entryPoint": "sum-of-intervals.mjs",
    "errors": [],
    "outfile": "dist/sum-of-intervals.mjs",
    "path": "\${process.cwd()}/__fixtures__/pkg/sum-of-intervals/dist/sum-of-intervals.mjs",
    "warnings": [],
  },
]
`;
